--- a/hugo.toml
+++ b/hugo.toml
@@ -13,8 +13,9 @@ enableInlineShortcodes = true
 home = ["HTML", "JSON", "RSS"]
 
 [params]
-description = "FastBootstrap is a beautiful Bootstrap theme for your next project with quick start. Powerful and free UI Kits that designed with Atlassian Design."
-page_title_suffix = "FastBootstrap Theme"
+description = "Beautiful Bootstrap UI components designed with Atlassian Design."
+page_title_suffix = "FastBootstrap"
+images = ["https://fastbootstrap.com/media/default-preview.jpg"]
 github_org = "https://github.com/fastbootstrap"
 repo = "https://github.com/fastbootstrap/atlassian-design-for-bootstrap"
 docs_repo = "https://github.com/fastbootstrap/docs"
