--- a/data/css.yml
+++ b/data/css.yml
@@ -564,6 +564,53 @@ text-transform:
       - lowercase
       - uppercase
       - capitalize
+text-underline-offset:
+  - property: text-underline-offset
+    class: underline-offset
+    values:
+      - auto: auto
+      - 0: 0px
+      - 1: 1px
+      - 2: 2px
+      - 4: 4px
+      - 8: 8px
+text-decoration-thickness:
+  - property: text-decoration-thickness
+    class: decoration
+    values:
+      - auto: auto
+      - from-font: from-font
+      - 0: 0px
+      - 1: 1px
+      - 2: 2px
+      - 4: 4px
+      - 8: 8px
+text-decoration-style:
+  - property: text-decoration-style
+    class: decoration
+    values:
+      - solid
+      - double
+      - dotted
+      - dashed
+      - wavy
+text-decoration-color:
+  - property: text-decoration-color
+    class: decoration
+    values:
+      - current: current
+      - transparent: transparent
+      - primary: var(--bs-primary)
+      - discovery: var(--bs-discovery)
+      - secondary: var(--bs-secondary)
+      - success: var(--bs-success)
+      - danger: var(--bs-danger)
+      - warning: var(--bs-warning)
+      - info: var(--bs-info)
+      - light: var(--bs-light)
+      - dark: var(--bs-dark)
+      - white: var(--bs-white)
+      - black: tvar(--bs-black)
 white-space:
   - property: white-space
     class: text
@@ -856,7 +903,7 @@ animation:
       - bounce: bounce 1s infinite
 letter-spacing:
   - property: letter-spacing
-    class: ls
+    class: tracking
     values:
       - tighter: -0.05em
       - tight: -0.025em
